# revere

./: .gitignore  CMakeLists.txt  FFmpeg.cmake  GStreamer.cmake  LICENSE  Qt.cmake  README.TXT  imgui_experiment.tar.bz2  libxml2.cmake  run_tests.sh
commander/: CMakeLists.txt
commander/include/: assigned_devices.h  utils.h
commander/source/: assigned_devices.cpp  main.cpp  utils.cpp
imgui_experiment/: CMakeLists.txt
imgui_experiment/source/: main.cpp
old_revere/: CMakeLists.txt
old_revere/source/: camera_info.ui  friendlyname.h  mainwindow.cpp  motiondetection.cpp  motiondetection.h  motiondetection.ui  newfilename.ui  neworexisting.cpp  neworexisting.h  pleasewait.cpp  pleasewait.h  rtspcredentials.cpp  rtspcredentials.ui  utils.h  ws.cpp
r_av/: CMakeLists.txt
r_av/include/r_av/: r_demuxer.h  r_locky.h  r_muxer.h  r_options.h  r_packet.h  r_packet_factory.h  r_transcoder.h  r_utils.h  r_video_decoder.h  r_video_encoder.h
r_av/source/: r_demuxer.cpp  r_locky.cpp  r_muxer.cpp  r_options.cpp  r_packet.cpp  r_packet_factory.cpp  r_utils.cpp  r_video_decoder.cpp  r_video_encoder.cpp
r_av/ut/: CMakeLists.txt
r_av/ut/include/: test_r_av_r_demuxer.h  test_r_av_r_muxer.h  test_r_av_r_transcoder.h  test_r_av_r_video_decoder.h  test_r_av_r_video_encoder.h
r_av/ut/source/: test_r_av_r_demuxer.cpp  test_r_av_r_muxer.cpp  test_r_av_r_transcoder.cpp  test_r_av_r_video_decoder.cpp  test_r_av_r_video_encoder.cpp
r_codec/: CMakeLists.txt
r_codec/include/r_codec/: r_video_decoder.h  r_video_encoder.h
r_codec/source/: r_video_decoder.cpp  r_video_encoder.cpp
r_db/: CMakeLists.txt
r_db/include/r_db/: r_sqlite_conn.h  r_sqlite_pager.h
r_db/source/: r_sqlite_conn.cpp  r_sqlite_pager.cpp
r_db/ut/: CMakeLists.txt
r_db/ut/include/: test_r_db_r_sqlite_conn.h  test_r_db_r_sqlite_pager.h
r_db/ut/source/: test_r_db_r_sqlite_conn.cpp  test_r_db_r_sqlite_pager.cpp
r_disco/: CMakeLists.txt
r_disco/include/r_disco/: r_agent.h  r_argus_device_info_agent.h  r_camera.h  r_cirrus_device_info_agent.h  r_device_info.h  r_devices.h  r_discovery.h  r_provider.h  r_recognizer.h  r_stream_config.h
r_disco/source/: r_agent.cpp  r_argus_device_info_agent.cpp  r_cirrus_device_info_agent.cpp  r_device_info.cpp  r_devices.cpp  r_discovery.cpp  r_recognizer.cpp  r_stream_config.cpp
r_disco/source/providers/: r_manual_provider.cpp  r_onvif_provider.cpp
r_fakey/: CMakeLists.txt
r_fakey/include/r_fakey/: r_fake_camera.h
r_fakey/source/: r_fake_camera.cpp
r_http/: CMakeLists.txt
r_http/include/r_http/: r_client_request.h  r_client_response.h  r_http_exception.h  r_methods.h  r_range_request_generator.h  r_server_request.h  r_server_response.h  r_uri.h  r_utils.h  r_web_server.h
r_http/source/: r_client_request.cpp  r_client_response.cpp  r_http_exception.cpp  r_methods.cpp  r_range_request_generator.cpp  r_server_request.cpp  r_server_response.cpp  r_uri.cpp  r_utils.cpp
r_http/ut/: CMakeLists.txt
r_http/ut/include/: test_r_http_r_client_request.h  test_r_http_r_client_response.h  test_r_http_r_range_request_generator.h  test_r_http_r_server_response.h  test_r_http_r_utils.h  test_r_http_r_web_server.h
r_http/ut/source/: test_r_http_r_client_request.cpp  test_r_http_r_client_response.cpp  test_r_http_r_range_request_generator.cpp  test_r_http_r_server_response.cpp  test_r_http_r_utils.cpp  test_r_http_r_web_server.cpp
r_pipe/: CMakeLists.txt
r_pipe/include/r_pipe/: r_control.h  r_filter.h  r_filter_group.h  (+3 more)
r_pipe/source/: r_control.cpp  r_media_object.cpp
r_pipeline/: CMakeLists.txt
r_pipeline/source/: r_gst_buffer.cpp  r_gst_source.cpp  r_sample_context.cpp  r_stream_info.cpp
r_rtsp/: CMakeLists.txt
r_rtsp/source/: r_client_connection.cpp  r_client_request.cpp  r_client_response.cpp  r_exception.cpp  r_fake_camera.cpp  r_methods.cpp  r_rtp.cpp  r_rtsp_server.cpp  r_sdp.cpp  r_server_connection.cpp  r_server_request.cpp  r_server_response.cpp  r_status.cpp
r_rtsp/ut/: CMakeLists.txt
r_storage/: CMakeLists.txt
r_storage/source/: r_append_file.cpp  r_dumbdex.cpp  r_file_index.cpp  r_ind_block.cpp  r_queries.cpp  r_rel_block.cpp  r_ring.cpp  r_storage_engine.cpp  r_storage_file.cpp  r_storage_file_reader.cpp  r_stream_time.cpp
r_storage/ut/: CMakeLists.txt
r_utils/: CMakeLists.txt
r_utils/source/: r_algorithms.cpp  r_blob_tree.cpp  r_exception.cpp  r_file.cpp  r_file_lock.cpp  r_logger.cpp  r_md5.cpp  r_memory_map.cpp  r_process.cpp  r_sha1.cpp  r_sha_256.cpp  r_socket.cpp  r_socket_address.cpp  r_stack_trace.cpp  r_string.cpp  r_string_utils.cpp  r_time_utils.cpp  r_timer.cpp  r_udp_receiver.cpp  r_udp_sender.cpp  r_udp_socket.cpp  r_uuid.cpp
r_utils/ut/: CMakeLists.txt
r_vss/: CMakeLists.txt
r_vss/source/: r_motion_engine.cpp  r_recording_context.cpp  r_stream_keeper.cpp
r_vss_client/: CMakeLists.txt
r_vss_client/source/: r_ds.cpp  r_frame.cpp  r_media_parser.cpp  r_query.cpp  r_query_generator.cpp  r_sdp.cpp
r_vss_client/ut/: CMakeLists.txt
revere/: CMakeLists.txt
revere/include/: font_catalog.h  gl_utils.h  utils.h
revere/source/: font_catalog.cpp  friendlyname.cpp  friendlyname.ui  gl_utils.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newfilename.cpp  newfilename.h  neworexisting.cpp  neworexisting.ui  pleasewait.ui  retention.cpp  retention.h  retention.ui  revere.qrc  rtspcredentials.cpp  rtspcredentials.h  rtspcredentials.ui  utils.cpp  utils.h  ws.cpp  ws.h
silo/: CMakeLists.txt
silo/source/: Cameras.qml  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  utils.cpp
vas/: CMakeLists.txt
vas/include/: motion_context.h
vas/source/: main.cpp  motion_context.cpp
vss/: CMakeLists.txt  readme.txt
vss/include/: data_sources.h  stream_host.h
vss/source/: data_sources.cpp  main.cpp
vts/: CMakeLists.txt  readme.txt  test.html
vts/cirrus/: Cameras.html  Clips.html  Config.html  ContactUs.html  Highlights.html  cirrus.bsdesign  test.html
vts/include/: decode_work_queue.h  jpg.h  stream_segment.h  video.h
vts/source/: jpg.cpp  main.cpp  stream_segment.cpp  video.cpp
(+1642 files in other folders)
